add wxfinancy
